# collabserver-server

./: .gitignore  .gitmodules  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
CMake/: AddCompilerFlags.cmake  AddDebug.cmake  AddDependencies.cmake  AddTests.cmake  CompilerFlags.cmake  CreateExecutables.cmake  CreateLibraries.cmake  Dependencies.cmake  Executables.cmake
CMake/Dependencies/: AddGoogleTest.cmake
CMake/ExternalProjects/: CollabCommon.cmake  Collabcommon.cmake  Collabdata.cmake
client/msgDebugger/include/: inputHelper.h
clients/backendDebugger/include/: BackendDebugger.h
clients/backendDebugger/src/: BackendDebugger.cpp
clients/cpp_proxy/include/: ServerProxy.h
clients/cpp_proxy/src/: ServerProxy.cpp
clients/databaseDebugger/include/: DatabaseDebugger.h
clients/databaseDebugger/src/: DatabaseDebugger.cpp  main.cpp
clients/debugger/: main.cpp
clients/debugger/include/: inputHelper.h  messageSpawner.h
clients/debugger/src/: inputHelper.cpp  main.cpp  messageSpawner.cpp  terminal.cpp
clients/msgDebugger/include/: MsgDebugger.h  terminal.h
clients/msgDebugger/src/: MsgDebugger.cpp  main.cpp  terminal.cpp
cmake/: AddCompilerFlags.cmake
common/include/messaging/: IMessage.h  IMessageEvent.h  MessageFactory.h  MessageTypes.h
common/include/network/: MessageHelper.h
common/include/utils/: Singleton.h  Uncopyable.h
common/src/messaging/: MessageFactory.cpp
common/src/network/: MessageHelper.cpp  NetHelper.cpp
crdt-examples/: README.md
crdt-examples/include/: CvRDT_GIntCounter.h  CvRDT_GIntVector.h  CvRDT_PNIntCounter.h  CvRDT_PNIntVector.h
crdt-examples/include/CvRDT/: 2PSet.h  GCounterInt.h  GSet.h  GSetInt.h  GVectorInt.h  LWWRegister.h  LWWRegisterInt.h  PNCounterInt.h  PNVectorInt.h  USetInt.h
crdt-examples/test/: CvRDT_GIntCounter_Test.h  CvRDT_GIntVector_Test.h  CvRDT_PNIntCounter_Test.h  CvRDT_PNIntVector_Test.h  Makefile  main.c  main.cpp  test_CRDT
crdt-examples/test/CmRDT/: GCounterInt_Test.h
crdt-examples/test/CvRDT/: 2PSet_Test.h  GCounterInt_Test.h  GCounter_Test.h  GSetInt_Test.h  GVectorInt_Test.h  LWWRegister_Test.h  PNCounterInt_Test.h  USetInt_Test.h
crdt/examples/: core  main.cpp
crdt/examples/CmRDT/: LWWGraph_Example.h  LWWMap_Example.h  LWWRegister_Example.h  LWWSet_Example.h
crdt/examples/CvRDT/: 2P2PGraph_Example.h  GGraph_Example.h  GMap_Example.h
crdt/include/CmRDT/: GCounterInt.h  LWWGraph.h  LWWMap.h  LWWRegister.h  LWWSet.h
crdt/include/CvRDT/: 2P2PGraph.h  2PSet.h  GCounter.h  GGraph.h  GMap.h  GSet.h  LWWRegister.h  PNCounter.h  PNCounterInt.h
crdt/include/collab/: LWWViewMDE.h
crdt/test/: Makefile  main.cpp
crdt/test/CvRDT/: 2PSet_Test.h  GSet_Test.h  LWWRegister_Test.h  PNCounter_Test.h  PNVectorInt_Test.h
debug/: main.cpp
debug/src/: InputHelper.cpp  InputHelper.h  MsgDebugger.cpp  MsgDebugger.h  Terminal.cpp  Terminal.h  main.cpp
debugger/src/: MsgDebugger.cpp  inputHelper.cpp
documents/: schedule.org
include/: CollabObject.h  DebugCollabObj.h  Document.h  Entity.h
include/collab/core/: AbsModel.h  Collaborator.h  Room.h
include/collabobject/: CollabObject.h  History.h  Mutation.h
include/collabobject_impl/: MDEModel.h
include/collabserver/core/: Broadcaster.h  CollabDataFactory.h  CollabInstance.h  CollabServer.h  Connector.h  DataFactory.h  DataID.h  InterfaceControl.h  OperationInfo.h  Room.h  Storage.h  StorageConfig.h  User.h  UserSession.h
include/collabserver/network/: MessageListener.h  Server.h
include/collabserver/utils/: Log.h  Singleton.h  Uncopyable.h  constants.h
include/core/: CollabServer.h
include/event/atompm/: EventAtompmCreate.h  EventAtompmDelete.h  EventAtompmRead.h  EventAtompmUpdate.h
include/event/debug/: EventDebugCreate.h  EventDebugDelete.h  EventDebugRead.h  EventDebugUpdate.h
include/message/: AbsMessageFactory.h  CreateMsgData.h  CreateMsgSerializer.h  Event.h  EventTestCreate.h  JsonSerializer.h  Message.h  MessageTestCreate.h  MessageTestFactory.h  Route.h  Router.h
include/message/atompm/: MessageAtompmCreate.h  MessageAtompmDelete.h  MessageAtompmFactory.h  MessageAtompmRead.h  MessageAtompmUpdate.h
include/message/debug/: MessageDebugCreate.h  MessageDebugDelete.h  MessageDebugFactory.h  MessageDebugRead.h  MessageDebugUpdate.h
include/messaging/: IMessage.h  IMessageEvent.h  MessageAbsFactory.h  MessageEvent.h  MessageRoute.h  MessageRouter.h  MessageTypes.h
include/network/: MessageReceiver.h  Server.h
include/util/: Singleton.h  Uncopyable.h
include/utils/: Singleton.h  Uncopyable.h
proxie/include/collabserver/: ServerProxy.h  proxy.h
proxie/src/: ServerProxy.cpp
proxies/cpp_proxy/include/: ServerProxy.h
proxies/cpp_proxy/src/: ServerProxy.cpp
proxy/include/collabserver/: proxy.h
proxy/src/: ServerProxy.cpp  ServerProxy.h  ViewService.h  proxy.cpp
proxy/src/messaging/: MessageFactory.cpp
server/include/collabobject/: CollabObject.h
server/include/core/: CollabServer.h  View.h
server/include/network/: MessageReceiver.h
server/src/: main.cpp
server/src/collabobject/: History.cpp
server/src/messaging/: MessageFactory.cpp
server/src/network/: MessageReceiver.cpp
src/: CMakeLists.txt  Server.cpp  main.cpp
src/collabobject/: History.cpp
src/collabserver/server/: Server.h
src/core/: CollabInstance.cpp  CollabServer.cpp  DataID.cpp  Room.cpp  Storage.cpp  User.cpp  UserSession.cpp
src/event/atompm/: EventAtompmCreate.cpp  EventAtompmDelete.cpp  EventAtompmRead.cpp  EventAtompmUpdate.cpp
src/event/debug/: EventDebugCreate.cpp  EventDebugDelete.cpp  EventDebugRead.cpp  EventDebugUpdate.cpp
src/message/: EventTestCreate.cpp  MessageTestFactory.cpp  Router.cpp
src/messaging/: MessageRouter.cpp
src/network/: MessageFactory.cpp  MessageListener.cpp  MessageReceiver.cpp  Server.cpp
src/room/: CollabServer.cpp
test/: runAllTests.cpp
test/core/: Test_CollabInstance.cpp  Test_CollabServer.cpp  Test_Room.cpp
tests/core/: Test_CollabServer.cpp
tests/room/: Test_CollabServer.cpp
tool/: configProject.py
tools/: configProject.py
(+77 files in other folders)
